# ullar

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: maturin.yml  release.yml  test.yml
crates/py-ullar/: Cargo.toml
crates/py-ullar/src/: lib.rs
crates/ullar/: Cargo.toml
crates/ullar-aster/: Cargo.toml
crates/ullar-bam/: Cargo.toml
crates/ullar-bam/src/: types.rs
crates/ullar-bam/src/finder/: files.rs
crates/ullar-bcftools/: Cargo.toml
crates/ullar-bcftools/src/: lib.rs  main.rs
crates/ullar-bcftools/src/batch/: mod.rs
crates/ullar-bcftools/src/bcftools/: call.rs  mod.rs  mpileup.rs
crates/ullar-bpp/: Cargo.toml
crates/ullar-bwa/: Cargo.toml
crates/ullar-bwa/src/: lib.rs  main.rs
crates/ullar-bwa/src/batch/: mod.rs  multi_refs.rs  single_ref.rs
crates/ullar-bwa/src/bwa/: errors.rs  index.rs  mem.rs  metadata.rs  mod.rs  subprocess.rs  types.rs
crates/ullar-bwa/src/samtools/: index.rs  mod.rs  sort.rs  subprocess.rs  view.rs
crates/ullar-deps/: Cargo.toml
crates/ullar-deps/src/: main.rs
crates/ullar-deps/src/dir/: mod.rs
crates/ullar-deps/src/file/: mod.rs
crates/ullar-fastp/: Cargo.toml
crates/ullar-fastq/: Cargo.toml
crates/ullar-fastq/src/: main.rs
crates/ullar-fastq/src/files/: finder.rs  header.rs  mod.rs  reader.rs  reads.rs  types.rs
crates/ullar-fastq/src/types/: illumina.rs  mod.rs  nanopore.rs  pacbio.rs  sra.rs
crates/ullar-gatk/: Cargo.toml
crates/ullar-gatk/src/: lib.rs  main.rs
crates/ullar-gatk/src/batch/: mod.rs  variant_calling.rs
crates/ullar-gatk/src/gatk/: db_import.rs  duplicate.rs  interval.rs  mod.rs  read_groups.rs  sort.rs  subprocess.rs  types.rs  variant_calling.rs  variant_filtration.rs
crates/ullar-gatk/src/samples/: group.rs  map.rs  mod.rs
crates/ullar-iqtree/: Cargo.toml
crates/ullar-lastz/: Cargo.toml
crates/ullar-logger/: Cargo.toml
crates/ullar-logger/src/: commands.rs  lib.rs
crates/ullar-mafft/: Cargo.toml
crates/ullar-ncbi/: Cargo.toml
crates/ullar-ncbi/src/: lib.rs
crates/ullar-ncbi/src/jsonl/: mod.rs  records.rs  types.rs
crates/ullar-ncbi/src/ncbi/: mod.rs
crates/ullar-pilon/: Cargo.toml
crates/ullar-pilon/src/: lib.rs  main.rs
crates/ullar-pilon/src/batch/: mod.rs  polish.rs
crates/ullar-pilon/src/pilon/: polish.rs  types.rs
crates/ullar-sambamba/: Cargo.toml
crates/ullar-sambamba/src/: lib.rs  main.rs
crates/ullar-sambamba/src/batch/: markdup.rs
crates/ullar-sambamba/src/sambamba/: markdup.rs  mod.rs
crates/ullar-samtools/: Cargo.toml
crates/ullar-samtools/src/: lib.rs  main.rs  types.rs
crates/ullar-samtools/src/batch/: index.rs  mod.rs  phase.rs
crates/ullar-samtools/src/samtools/: faidx.rs  fixmate.rs  index.rs  mod.rs  phase.rs  sort.rs
crates/ullar-segul/: Cargo.toml
crates/ullar-segul/src/: main.rs
crates/ullar-segul/src/sequence/: pile.rs  transpose.rs
crates/ullar-spades/: Cargo.toml
crates/ullar-sys/: Cargo.toml
crates/ullar-sys/src/: lib.rs
crates/ullar-utils/: Cargo.toml
crates/ullar-utils/src/: regex.rs
crates/ullar-vcf/: Cargo.toml
crates/ullar-vcf/src/: types.rs
crates/ullar-vcf/src/finder/: files.rs
crates/ullar-vcftools/: Cargo.toml
crates/ullar/src/cli/commands/: alignment.rs  assembly.rs  clean.rs  map.rs  mod.rs  new.rs  tree.rs  utils.rs
crates/ullar/src/core/assembly/: configs.rs  init.rs  spades.rs
crates/ullar/src/core/clean/: fastp.rs
crates/ullar/src/core/map/: configs.rs  minimap.rs  mod.rs  summary.rs
crates/ullar/src/core/tree/: aster.rs  configs.rs  init.rs  iqtree.rs  mod.rs
crates/ullar/src/core/utils/: checksum.rs
crates/ullar/src/helper/: command.rs  files.rs
crates/ullar/src/types/: alignments.rs  map.rs  reads.rs  runner.rs
crates/ullar/tests/data/alignments/: gene_1.fas  gene_4.fas
crates/ullar/tests/data/configs/: clean_read.toml
crates/ullar/tests/data/maf/: Rattus_rattus_mitogenome_nc012374.fas  mitogenomes.maf
py-ullar/: Cargo.toml  README.md  pyproject.toml
py-ullar/src/: lib.rs
py-ullar/tests/: test_utils.py
src/: lib.rs  main.rs
src/cli/: args.rs  cli.rs  mod.rs
src/cli/commands/: assembly.rs  clean.rs  deps.rs  init.rs  mod.rs  utils.rs
src/core/: mod.rs  new.rs
src/core/assembly/: mod.rs  reports.rs  spades.rs
src/core/configs/: cleaned_reads.rs  mod.rs  raw_reads.rs
src/core/init/: assembly.rs  map.rs  mod.rs  new.rs
src/core/map/: init.rs  mod.rs
src/core/new/: configs.rs  mod.rs  reads.rs
src/core/qc/: fastp.rs  mod.rs  reports.rs
src/core/utils/: checksum.rs  deps.rs  mod.rs  scan.rs  sha256.rs  symlinks.rs
src/helper/: checksum.rs  common.rs  files.rs  hasher.rs  logs.rs  mod.rs  reads.rs  regex.rs  tracker.rs  utils.rs  yaml.rs
src/init/: finder.rs  mod.rs
src/new/: mod.rs
src/types/: mod.rs
src/utils/: mod.rs
ullar/: Cargo.toml  build.rs
ullar/src/: lib.rs
ullar/src/cli/: mod.rs
ullar/src/cli/commands/: alignment.rs  assembly.rs  clean.rs  common.rs  init.rs  map.rs  mod.rs  new.rs  tree.rs  utils.rs
ullar/src/core/: mod.rs  new.rs
ullar/src/core/alignment/: configs.rs  init.rs  mafft.rs  mod.rs  reports.rs
ullar/src/core/assembly/: configs.rs  init.rs  mod.rs  spades.rs
ullar/src/core/clean/: configs.rs  fastp.rs  init.rs  mod.rs  reports.rs
ullar/src/core/configs/: alignment.rs  cleaned_reads.rs  mapped_contigs.rs  mod.rs  raw_reads.rs  trees.rs
ullar/src/core/init/: map.rs  mod.rs  new.rs
ullar/src/core/map/: configs.rs  init.rs  lastz.rs  minimap.rs  mod.rs  reports.rs  sequences.rs  summary.rs  writer.rs
ullar/src/core/qc/: fastp.rs  mod.rs
ullar/src/core/tree/: aster.rs  configs.rs  init.rs  iqtree.rs  mod.rs
ullar/src/core/utils/: deps.rs  mod.rs  rename.rs  scan.rs  symlinks.rs
ullar/src/helper/: alignments.rs  command.rs  common.rs  configs.rs  fastq.rs  files.rs  mod.rs  reads.rs  regex.rs  tracker.rs  utils.rs
ullar/src/types/: alignments.rs  lastz.rs  map.rs  mod.rs  reads.rs  runner.rs  trees.rs
ullar/tests/data/alignments/: gene_2.fas  gene_3.fas
ullar/tests/data/configs/: clean_read.toml
