[package]
name = "ullar"
version = "0.3.0"
edition = "2021"
authors = ["Heru Handika <herubiolog@gmail.com>"]
license = "MIT"
description = "A high-performance, accessible phylogenomic pipeline"
readme = "../README.md"
repository = "https://github.com/hhandika/ullar"
keywords = ["cli", "utility", "pipeline", "genomics", "phylogenomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.1"
csv = "1.3.0"
data-encoding = "2.6.0"
dialoguer = "0.11.0"
indicatif = "0.17.8"
infer = "0.15.0"
log = "0.4.21"
log4rs = "1.2.0"
md-5 = "0.10.6"
once_cell = "1.19.0"
rayon = "1.10.0"
regex = "1.10.4"
segul = "0.21.1"
serde = "1.0.201"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
size = "0.4.1"
sysinfo = "0.30.12"
walkdir = "2.5.0"

[target.'cfg(unix)'.dependencies]
minimap2 = "0.1.17"
