[package]
name = "py-ullar"
version = "0.1.0"
edition = "2021"
authors = ["Heru Handika <herubiolog@gmail.com>"]
license = "MIT"
description = "A python binding for the ULLAR high-performance, accessible phylogenomic pipeline"
readme = "README.md"
repository = "https://github.com/hhandika/ullar"
keywords = ["cli", "utility", "pipeline", "genomics", "phylogenomics"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_ullar"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.*.*"
ullar = { path = "../ullar" }
