[package]
name = "ullar-bwa"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
log = "0.4.29"
log4rs = "1.4.0"
noodles = { version = "0.104.0", features = ["bam", "sam"] }
num_cpus = "1.17.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
ullar = { version = "0.4.1", path = "../ullar" }
ullar-fastq = { version = "0.1.0", path = "../ullar-fastq" }
which = "8.0.0"
