[package]
name = "ullar-bwa"
version = "0.1.0"
edition = "2024"
authors = ["Heru Handika <herubiolog@gmail.com>"]
license = "MIT"
description = "A high-performance, accessible phylogenomic pipeline using BWA for read alignment"
readme = "../README.md"
repository = "https://github.com/hhandika/ullar"
keywords = ["cli", "utility", "pipeline", "genomics", "phylogenomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.5.54", features = ["cargo", "derive"] }
colored = "3.1.1"
log = "0.4.29"
log4rs = "1.4.0"
noodles = { version = "0.104.0", features = ["bam", "sam"] }
num_cpus = "1.17.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
ullar = { version = "0.4.1", path = "../ullar" }
ullar-fastq = { version = "0.1.0", path = "../ullar-fastq" }
ullar-logger = { version = "0.1.0", path = "../ullar-logger" }
ullar-samtools = { version = "0.1.0", path = "../ullar-samtools" }
which = "8.0.0"
