[package]
name = "ullar-fastq"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
log = "0.4.29"
log4rs = "1.4.0"
noodles = { version = "0.104.0", features = ["fastq"] }
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
ullar = { version = "0.4.1", path = "../ullar" }
