[package]
name = "ullar-fastq"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
colored = "3.1.1"
flate2 = "1.1.8"
infer = "0.19.0"
log = "0.4.29"
log4rs = "1.4.0"
noodles = { version = "0.104.0", features = ["fastq"] }
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
ullar = { version = "0.4.1", path = "../ullar" }
walkdir = "2.5.0"
