[package]
name = "ullar-gatk"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
log = "0.4.29"
log4rs = "1.4.0"
ullar-bam = { version = "0.1.0", path = "../ullar-bam" }
ullar-fastq = { version = "0.1.0", path = "../ullar-fastq" }
ullar-logger = { version = "0.1.0", path = "../ullar-logger" }
ullar-sys = { version = "0.1.0", path = "../ullar-sys" }
ullar-vcf = { version = "0.1.0", path = "../ullar-vcf" }
