[package]
name = "ullar-sambamba"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
log = "0.4.29"
log4rs = "1.4.0"
num_cpus = "1.17.0"
ullar-bam = { version = "0.1.0", path = "../ullar-bam" }
ullar-logger = { version = "0.1.0", path = "../ullar-logger" }
